# model-converter

./: CMakeLists.txt  README.md
cmake/: add_compile_options_cxx.cmake  cpp_config.cmake
cmake/libs/: benchmark.cmake  g3log.cmake  gtest.cmake  tinyobjloader.cmake
container/: env_ubuntu_gcc
src/: convert_model.cpp  main.cpp
src/model/: convert.cppm  format.cppm
src/model/formats/: obj.cppm  stl.cppm
